# MKP-PSO

./: .gitignore  README.md  README.txt
cpu/: CMakeLists.txt  bitvector.h  data.cc  data.h  generic.h  knapsack.cc  knapsack.h  main.cc  particle.h  random.h
data/: FORMAT
gpu/: CMakeLists.txt  cuda.h  data.cc  data.h  generic.h  knapsack.cu  knapsack.h  main.cc  random.h  reduction.h  swarm.h
libs/cmake/: FindPAPI.cmake
libs/include/: cephes.h
utils/: mkp.sh  multi.sh  raijin.sh  run.sh
